Fixed the input text cut off issue.

--- a/frontend/public/assets/scss/main.css
+++ b/frontend/public/assets/scss/main.css
@@ -205,6 +205,10 @@ a img {
   /* height: 26px; */
   border: 1px solid grey;
 }
+.form-control-add-claim{
+
+  padding: inherit;
+}
 .form-control-table {
   /* height: 50px; */
   /* height: 37px; */
